// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningsViews WarningsView displays nothing if no notifications 1`] = `<div />`;

exports[`WarningsViews WarningsView does displays a warning 1`] = `
<div>
  <div
    class="sc-kpOJdX dcjZxn"
  >
    <div
      class="sc-dxgOiQ YDkMG"
    >
      <div
        class="sc-ckVGcZ hWXbch"
      >
        <div
          class="sc-kEYyzF bUysyJ"
        >
          WARNING xx0
        </div>
        <h4
          class="sc-jWBwVP fDrbnp"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-jKJlTe loXQau"
      >
        <div
          class="sc-ckVGcZ hWXbch"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-jKJlTe loXQau"
        >
          <pre
            class="sc-jAaTju jVGCzW"
          >
            EXPLAIN MATCH xx3
            <br
              class="sc-cMljjf eTbdzc"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsViews WarningsView does displays multiple warnings 1`] = `
<div>
  <div
    class="sc-kpOJdX dcjZxn"
  >
    <div
      class="sc-dxgOiQ YDkMG"
    >
      <div
        class="sc-ckVGcZ hWXbch"
      >
        <div
          class="sc-kEYyzF bUysyJ"
        >
          WARNING xx0
        </div>
        <h4
          class="sc-jWBwVP fDrbnp"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-jKJlTe loXQau"
      >
        <div
          class="sc-ckVGcZ hWXbch"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-jKJlTe loXQau"
        >
          <pre
            class="sc-jAaTju jVGCzW"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-cMljjf eTbdzc"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
    <div
      class="sc-dxgOiQ YDkMG"
    >
      <div
        class="sc-ckVGcZ hWXbch"
      >
        <div
          class="sc-kEYyzF bUysyJ"
        >
          WARNING yy0
        </div>
        <h4
          class="sc-jWBwVP fDrbnp"
        >
          My yy1 warning
        </h4>
      </div>
      <div
        class="sc-jKJlTe loXQau"
      >
        <div
          class="sc-ckVGcZ hWXbch"
        >
          This is yy2 warning
        </div>
        <div
          class="sc-jKJlTe loXQau"
        >
          <pre
            class="sc-jAaTju jVGCzW"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-cMljjf eTbdzc"
            />
               
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;
